// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button when type is SECONDARY renders 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "overflow": "hidden",
        },
        {
          "borderRadius": 100,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        {
          "attribute": "selectableItemBackground",
          "rippleRadius": undefined,
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#F9F6F0",
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "minWidth": 120,
            "opacity": undefined,
            "paddingHorizontal": 24,
            "paddingVertical": 5,
          },
          undefined,
        ]
      }
    >
      <Text
        maxFontSizeMultiplier={1}
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 16,
            "lineHeight": 22,
            "marginLeft": 0,
            "marginRight": 0,
          }
        }
      >
        Button
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button when type not given defaults to primary 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "overflow": "hidden",
        },
        {
          "borderRadius": 100,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        {
          "attribute": "selectableItemBackground",
          "rippleRadius": undefined,
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#1AB775",
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "minWidth": 120,
            "opacity": undefined,
            "paddingHorizontal": 24,
            "paddingVertical": 5,
          },
          undefined,
        ]
      }
    >
      <Text
        maxFontSizeMultiplier={1}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 16,
            "lineHeight": 22,
            "marginLeft": 0,
            "marginRight": 0,
          }
        }
      >
        Button
      </Text>
    </View>
  </View>
</View>
`;
